# BooruSwipe

./: .dockerignore  .gitignore  Dockerfile  README.md  booru.conf.example  docker-compose.yml  pyproject.toml  run.bat  run.sh
scripts/: docker-backup-db  docker-lib.sh  docker-logs  docker-rebuild  docker-reset-db  docker-restart  docker-restore-db  docker-shell  docker-swap-db  docker-test-compat  docker-up
src/: __init__.py
src/booruswipe/: __init__.py  __main__.py  booru_sources.py  selection.py  tag_utils.py
src/booruswipe/api/: __init__.py  deps.py  routes.py
src/booruswipe/db/: __init__.py  database.py  models.py  repository.py
src/booruswipe/gelbooru/: __init__.py  client.py  models.py
src/booruswipe/llm/: __init__.py  client.py  preference_learner.py  prompts.py
src/static/: app.js  index.html  styles.css
tests/: __init__.py  test_booru_models.py  test_booru_retries.py  test_booru_sorting.py  test_booru_sources.py  test_db.py  test_llm.py
